--- a/src/assets/sass/style.scss
+++ b/src/assets/sass/style.scss
@@ -2,3 +2,39 @@
   font-family: 'rabikiso';
   src: url('./src/assets/fonts/Roboto/Roboto-Light.ttf') format('truetype');
 }
+
+.swiper-wrapper {
+    min-width: 0;
+}
+.swiper {
+    height: 100%;
+    max-height: 100vw;
+    min-height: 0;
+    min-width: 0;
+    max-width: 100vw;
+    width: 100%;
+    overflow: hidden;
+    display: grid;
+
+    a {
+        text-decoration: none
+    }
+    h2 {
+        margin: 0 0 25px;
+    }
+    h3 {
+        margin: 10px 0 0;
+        color: white;
+        font-size: 15px;
+        min-height: 30px;
+    }
+    img {
+        width: 100%;
+        border-radius: 10px;
+    }
+    p {
+        color: #bbb;
+        font-size: 13px;
+        letter-spacing: 0.75px;
+    }
+}
