--- a/src/assets/sass/style.scss
+++ b/src/assets/sass/style.scss
@@ -3,6 +3,28 @@
   src: url('./src/assets/fonts/Roboto/Roboto-Light.ttf') format('truetype');
 }
 
+body {
+    color: white;
+    background: black;
+    overflow: hidden;
+    margin: 0;
+    padding: 10px;
+    box-sizing: border-box;
+    font-family: rabikiso;
+}
+.main-container {
+    display: flex;
+}
+.container {
+    flex: 1;
+    background: #222;
+    padding: 25px;
+    border-radius: 10px;
+    box-sizing: border-box;
+    overflow: scroll;
+    height: inherit;
+    max-height: calc(100vh - 110px);
+}
 .swiper-wrapper {
     min-width: 0;
 }
